Added user-perspective for account deletion request

--- a/microsetta_interface/templates/account_details.jinja2
+++ b/microsetta_interface/templates/account_details.jinja2
@@ -117,7 +117,11 @@
             },cc);
         });
 
-
+        function verifyDeleteUserRequest(){
+            let confirmMsg = "{{ _('You are requesting to delete your account.') }} " +
+                "{{ _('This operation cannot be undone.  Are you sure you want to delete this account?') }} ";
+                return window.confirm(confirmMsg);
+            }
     </script>
 {% endblock %}
 {% block breadcrumb %}
@@ -435,4 +439,20 @@
         {% endif %}
     </div>
 </div>
+{% if not admin_mode %}
+<div class="container">
+    <div class="row">
+        <div class="col-12 {% if samples|length > 0 %}tooltipper{% endif %}" data-title="{{ _('Request account deletion.') }}">
+            <p> 
+            </p>
+            <center>
+            <form name="request_delete_{{account.account_id}}_form" method="post" action="/accounts/{{ account.account_id }}/request/remove" onsubmit="return verifyDeleteUserRequest();">
+            {{ _('If you wish to delete this account, please click the following button to submit your request to an administrator.') }} <button type="submit" class="btn btn-outline-danger">{{ _('Request Account Deletion') }}</button> <br>IMPORTANT: Once you click this button, the request cannot be undone. Your account cannot be restored after it has been deleted.</br>
+            </form>
+            </center>
+        </div>
+    </div>
+</div>
+{% endif %}
 {% endblock %}
+
