--- a/microsetta_interface/templates/survey.jinja2
+++ b/microsetta_interface/templates/survey.jinja2
@@ -167,7 +167,8 @@
                         form_submitted = 1;
                     }
                     else {
-                        alert("It looks like you're trying to submit this survey without answering any questions. If you'd prefer not to complete this survey, please return to the homepage.")
+                        alert("{{ _('It looks like you're trying to submit this survey without answering any questions. If you'd prefer not to complete this survey, please return to the homepage.') }}")
+                        
                     }
                 } else {
                     confirm_submit = true;
