test integration fix
changed you're to you are in the alert text

--- a/microsetta_interface/templates/survey.jinja2
+++ b/microsetta_interface/templates/survey.jinja2
@@ -167,8 +167,7 @@
                         form_submitted = 1;
                     }
                     else {
-                        alert("{{ _('It looks like you're trying to submit this survey without answering any questions. If you'd prefer not to complete this survey, please return to the homepage.') }}")
-                        
+                        alert("{{ _('It looks like you are trying to submit this survey without answering any questions. If you would prefer not to complete this survey, please return to the homepage.') }}")
                     }
                 } else {
                     confirm_submit = true;
