--- a/microsetta_interface/templates/sample.jinja2
+++ b/microsetta_interface/templates/sample.jinja2
@@ -16,6 +16,22 @@
     <script>
 
         $(document).ready(function(){
+            $("form").submit(function(e) {
+                var date = $("#sample_date").val()
+                date = new Date(date);
+                var lower_limit = new Date();
+                lower_limit .setFullYear( lower_limit.getFullYear() - 10 );
+                var upper_limit  = new Date();
+                upper_limit .setMonth(upper_limit.getMonth() + 1);
+                if(date < lower_limit) {
+                    alert("{{ _('Please select a date within the last 10 years.') }}")
+                    e.preventDefault(e);
+                } else if (date > upper_limit) {
+                    alert("{{ _('Please select a date within the next 30 days.') }}")
+                    e.preventDefault(e);
+                }
+            });
+            
             let form_name = 'sample_form';
             preventImplicitSubmission(form_name);
 
