--- a/microsetta_interface/templates/sample.jinja2
+++ b/microsetta_interface/templates/sample.jinja2
@@ -21,16 +21,12 @@
                 date = new Date(date);
                 var lower_limit = new Date();
                 lower_limit .setFullYear( lower_limit.getFullYear() - 10 );
-                lower_limit .setDate(lower_limit.getDate());
-                lower_limit .setMonth(lower_limit.getMonth());
                 var upper_limit  = new Date();
-                upper_limit .setFullYear( upper_limit.getFullYear() );
-                upper_limit .setDate(upper_limit.getDate());
                 upper_limit .setMonth(upper_limit.getMonth() + 1);
-                if(date.getTime() < lower_limit.getTime()) {
+                if(date < lower_limit) {
                     alert("{{ _('Please select a date within the last 10 years.') }}")
                     e.preventDefault(e);
-                } else if (date.getTime() > upper_limit.getTime()) {
+                } else if (date > upper_limit) {
                     alert("{{ _('Please select a date within the next 30 days.') }}")
                     e.preventDefault(e);
                 }
