--- a/microsetta_interface/templates/survey.jinja2
+++ b/microsetta_interface/templates/survey.jinja2
@@ -11,8 +11,8 @@
     <link rel="stylesheet" type="text/css" href="/static/vendor/vue-form-generator-2.3.4/vfg.css">
     <style type="text/css">
         img#bristol-chart {
-            height: auto;
-            width: 50%;
+            height: 50%;
+            width: 25%;
         }
 
         .vue-form-generator .field-radios .radio-list label {
